# ha-bopi-integration

./: .pre-commit-config.yaml  README.md  hacs.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: hassfest.yaml  linting.yaml  pr-labels.yaml  typing.yaml  validate.yaml
custom_components/bopi/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/bopi/translations/: en.json  es.json  fr.json
