[project]
name = "bopi"
version = "1.0.0"
description = "Bopi integration for Home Assistant."
authors = [{ name = "Matthieu Derasse", email = "opensource@derasse.fr" }]
maintainers = [{ name = "Matthieu Derasse", email = "opensource@derasse.fr" }]
license = "MIT"
requires-python = "<3.14,>=3.13.2"
readme = "README.md"
keywords = ["meetbopi", "bopi", "home assistant", "hacs", "integration"]
classifiers = []
dynamic = ["dependencies"]
dependencies = ['homeassistant (>=2025.9.0)', 'meetbopi>=1.0.1']

[tool.poetry]
requires-poetry = '>=2.0'
package-mode = false


[project.urls]
homepage = "https://github.com/mderasse/ha-bopi-integration"
repository = "https://github.com/mderasse/ha-bopi-integration"
documentation = "https://github.com/mderasse/ha-bopi-integration"
"Bug Tracker" = "https://github.com/mderasse/ha-bopi-integration/issues"
Changelog = "https://github.com/mderasse/ha-bopi-integration/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "^3.0.0"
codespell = "^2.4.1"
covdefaults = "^2.3.0"
mypy = "^1.14.0"
pre-commit-hooks = "^6.0.0"
prek = "^0.2.27"
pylint = "^4.0.0"
pytest = "^8.3.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.9.0"
safety = "^3.7.0"
syrupy = "^5.0.0"
yamllint = "^1.37.0"

[tool.codespell]
ignore-words-list = ["hass"]
skip = ["custom_components/bopi/translations/*"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.13"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false            # Fix this later!
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T"]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = ["duplicate-code", "format", "unsubscriptable-object"]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
